--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "google-finance": "^0.1.11",
     "yahoo-finance": "^0.3.5"
   }
 }
