--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
             "email": "info@bad4iz.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "scheb/yahoo-finance-api": "^3.1",
+        "kint-php/kint": "^2.2"
+    }
 }
